tests/rosetta/out/C/2048.error
cc: exit status 1
/tmp/2048.c: In function ‘spawnTile’:
/tmp/2048.c:167:12: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  167 |     return (tmp_item_t){.board = b, .full = 1};
      |            ^
/tmp/2048.c:176:10: error: incompatible types when returning type ‘tmp_item1_t’ but ‘int’ was expected
  176 |   return (tmp_item1_t){.board = b, .full = empty.len == 1};
      |          ^
/tmp/2048.c: In function ‘slideLeft’:
/tmp/2048.c:256:13: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  256 |       res = 0;
      |             ^
/tmp/2048.c:259:13: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  259 |       res = 0;
      |             ^
/tmp/2048.c:264:11: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  264 |     res = 0;
      |           ^
/tmp/2048.c:266:24: error: ‘tmp_item_t’ has no member named ‘row’
  266 |   return (tmp_item_t){.row = res, .gain = gain};
      |                        ^~~
/tmp/2048.c:266:30: error: incompatible types when initializing type ‘int’ using type ‘list_int’
  266 |   return (tmp_item_t){.row = res, .gain = gain};
      |                              ^~~
/tmp/2048.c:266:36: error: ‘tmp_item_t’ has no member named ‘gain’
  266 |   return (tmp_item_t){.row = res, .gain = gain};
      |                                    ^~~~
/tmp/2048.c: In function ‘moveLeft’:
/tmp/2048.c:274:24: error: request for member ‘data’ in something not a structure or union
  274 |     __auto_type new = r.data["row"];
      |                        ^
/tmp/2048.c:275:22: error: request for member ‘data’ in something not a structure or union
  275 |     score = score + r.data["gain"];
      |                      ^
/tmp/2048.c:278:33: error: ‘new’ undeclared (first use in this function)
  278 |       if ((b.data[y].data[x] != new.data[x])) {
      |                                 ^~~
/tmp/2048.c:278:33: note: each undeclared identifier is reported only once for each function it appears in
/tmp/2048.c:286:36: error: ‘tmp_item_t’ has no member named ‘score’
  286 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                    ^~~~~
/tmp/2048.c:286:52: error: ‘tmp_item_t’ has no member named ‘moved’
  286 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                    ^~~~~
/tmp/2048.c:286:60: warning: excess elements in struct initializer
  286 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                            ^~~~~
/tmp/2048.c:286:60: note: (near initialization for ‘(anonymous)’)
/tmp/2048.c:286:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  286 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |          ^
/tmp/2048.c: In function ‘moveRight’:
/tmp/2048.c:295:12: error: request for member ‘data’ in something not a structure or union
  295 |     rev = r.data["row"];
      |            ^
/tmp/2048.c:296:22: error: request for member ‘data’ in something not a structure or union
  296 |     score = score + r.data["gain"];
      |                      ^
/tmp/2048.c:308:36: error: ‘tmp_item_t’ has no member named ‘score’
  308 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                    ^~~~~
/tmp/2048.c:308:52: error: ‘tmp_item_t’ has no member named ‘moved’
  308 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                    ^~~~~
/tmp/2048.c:308:60: warning: excess elements in struct initializer
  308 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                            ^~~~~
/tmp/2048.c:308:60: note: (near initialization for ‘(anonymous)’)
/tmp/2048.c:308:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  308 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |          ^
/tmp/2048.c: In function ‘moveUp’:
/tmp/2048.c:339:24: error: request for member ‘data’ in something not a structure or union
  339 |     __auto_type new = r.data["row"];
      |                        ^
/tmp/2048.c:340:22: error: request for member ‘data’ in something not a structure or union
  340 |     score = score + r.data["gain"];
      |                      ^
/tmp/2048.c:343:33: error: ‘new’ undeclared (first use in this function)
  343 |       if ((b.data[y].data[x] != new.data[y])) {
      |                                 ^~~
/tmp/2048.c:351:36: error: ‘tmp_item_t’ has no member named ‘score’
  351 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                    ^~~~~
/tmp/2048.c:351:52: error: ‘tmp_item_t’ has no member named ‘moved’
  351 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                    ^~~~~
/tmp/2048.c:351:60: warning: excess elements in struct initializer
  351 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                            ^~~~~
/tmp/2048.c:351:60: note: (near initialization for ‘(anonymous)’)
/tmp/2048.c:351:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  351 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |          ^
/tmp/2048.c: In function ‘moveDown’:
/tmp/2048.c:360:12: error: request for member ‘data’ in something not a structure or union
  360 |     col = r.data["row"];
      |            ^
/tmp/2048.c:361:22: error: request for member ‘data’ in something not a structure or union
  361 |     score = score + r.data["gain"];
      |                      ^
/tmp/2048.c:373:36: error: ‘tmp_item_t’ has no member named ‘score’
  373 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                    ^~~~~
/tmp/2048.c:373:52: error: ‘tmp_item_t’ has no member named ‘moved’
  373 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                    ^~~~~
/tmp/2048.c:373:60: warning: excess elements in struct initializer
  373 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                            ^~~~~
/tmp/2048.c:373:60: note: (near initialization for ‘(anonymous)’)
/tmp/2048.c:373:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  373 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |          ^
/tmp/2048.c: In function ‘_mochi_main’:
/tmp/2048.c:415:11: error: request for member ‘data’ in something not a structure or union
  415 |   full = r.data["full"];
      |           ^
/tmp/2048.c:416:12: error: request for member ‘data’ in something not a structure or union
  416 |   board = r.data["board"];
      |            ^
/tmp/2048.c:418:12: error: request for member ‘data’ in something not a structure or union
  418 |   board = r.data["board"];
      |            ^
/tmp/2048.c:419:11: error: request for member ‘data’ in something not a structure or union
  419 |   full = r.data["full"];
      |           ^
/tmp/2048.c:427:16: error: request for member ‘data’ in something not a structure or union
  427 |       board = m.data["board"];
      |                ^
/tmp/2048.c:428:16: error: request for member ‘data’ in something not a structure or union
  428 |       score = m.data["score"];
      |                ^
/tmp/2048.c:429:16: error: request for member ‘data’ in something not a structure or union
  429 |       moved = m.data["moved"];
      |                ^
/tmp/2048.c:433:16: error: request for member ‘data’ in something not a structure or union
  433 |       board = m.data["board"];
      |                ^
/tmp/2048.c:434:16: error: request for member ‘data’ in something not a structure or union
  434 |       score = m.data["score"];
      |                ^
/tmp/2048.c:435:16: error: request for member ‘data’ in something not a structure or union
  435 |       moved = m.data["moved"];
      |                ^
/tmp/2048.c:439:16: error: request for member ‘data’ in something not a structure or union
  439 |       board = m.data["board"];
      |                ^
/tmp/2048.c:440:16: error: request for member ‘data’ in something not a structure or union
  440 |       score = m.data["score"];
      |                ^
/tmp/2048.c:441:16: error: request for member ‘data’ in something not a structure or union
  441 |       moved = m.data["moved"];
      |                ^
/tmp/2048.c:445:16: error: request for member ‘data’ in something not a structure or union
  445 |       board = m.data["board"];
      |                ^
/tmp/2048.c:446:16: error: request for member ‘data’ in something not a structure or union
  446 |       score = m.data["score"];
      |                ^
/tmp/2048.c:447:16: error: request for member ‘data’ in something not a structure or union
  447 |       moved = m.data["moved"];
      |                ^
/tmp/2048.c:454:17: error: request for member ‘data’ in something not a structure or union
  454 |       board = r2.data["board"];
      |                 ^
/tmp/2048.c:455:16: error: request for member ‘data’ in something not a structure or union
  455 |       full = r2.data["full"];
      |                ^
